@@ -1,4 +1,6 @@
 ver 0.15.16 (2010/??/??)
+* output:
+  - ao: initialize the ao_sample_format struct
 * encoders:
   - lame: explicitly configure the output sample rate
 * update: log all file permission problems
